Updated Version 1 of Starter Flask Template

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-myenv/
-
 *.pyc
-__pycache__/
-
-instance/
-
-.pytest_cache/
-.coverage
-htmlcov/
-
-dist/
-build/
 *.egg-info/
+
+
+
+v1/myenv/
+v1/__pycache__/
+
+v1/instance/
+
+v1/.pytest_cache/
+v1/.coverage
+
+
